@@ -9,5 +9,5 @@ Name: edbus
 Description: DBus convenience library
 @pkgconfig_requires_private@: @requirement_edbus@
 Version: @VERSION@
-Libs: -L${libdir} -ledbus @dbus_libs@
+Libs: -L${libdir} -ledbus @DBUS_LIBS@
 Cflags: -I${includedir}/e_dbus-@VMAJ@
