@@ -101,3 +101,7 @@
 
 	* 1.7.4 release
 
+2012-12-24 Vincent Torri
+
+	* Fix compilation on Windows when there is no .la files
+	* Remove useless variables in configure.ac
